# kukadu

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt~  README  package.xml
cfg/: book.prop  book_pick.prop  dmp.prop  haptic.prop  kukadu.prop  pouring.prop
cfg/arlocalizer/: ARParam.cfg
cfg/core/: kukadu.prop  kukie.sql  module_stat.list
doc/: doxygen
doc/html/: KUKADU.html  _2tutorials_2control_queue_8cpp-example.html  actionclip_8hpp_source.html  annotated.html  arlocalizer_8hpp_source.html  autocompfilter_8hpp_source.html  autonomoustester_8hpp_source.html  calibration_8hpp_source.html  cartesiandmp_8hpp_source.html  cartesiandmplearner_8hpp_source.html  classKomoPlanner.html  classKukaduException-members.html  classKukaduException.html  classMoveItKinematics.html  classPCTransformator-members.html  classPCTransformator.html  classRosSchunk.html  classes.html  classifier_8hpp_source.html  classkukadu_1_1ARCamera-members.html  classkukadu_1_1ARCamera.html  classkukadu_1_1ARTag2D-members.html  classkukadu_1_1ARTag2D.html  classkukadu_1_1ARToolKitPlusNode-members.html  classkukadu_1_1ARToolKitPlusNode.html  classkukadu_1_1ActionClip-members.html  classkukadu_1_1ActionClip.html  classkukadu_1_1ArLocalizer-members.html  classkukadu_1_1ArLocalizer.html  classkukadu_1_1ArLogger-members.html  classkukadu_1_1ArLogger.html  classkukadu_1_1AutoCompensatingFilter-members.html  classkukadu_1_1AutoCompensatingFilter.html  classkukadu_1_1AutonomousTester-members.html  classkukadu_1_1AutonomousTester.html  classkukadu_1_1CachedPlanner-members.html  classkukadu_1_1CachedPlanner.html  classkukadu_1_1Calibrator-members.html  classkukadu_1_1Calibrator.html  classkukadu_1_1CameraCalibrator-members.html  (+557 more)
doc/latex/: KUKADU.tex  _2tutorials_2control_queue_8cpp-example.tex  annotated.tex  classKomoPlanner.tex  classKukaduException.eps  classKukaduException.tex  classMoveItKinematics.tex  classPCTransformator.eps  classPCTransformator.tex  classRosSchunk.tex  classkukadu_1_1ARCamera.eps  classkukadu_1_1ARCamera.tex  classkukadu_1_1ARTag2D.eps  classkukadu_1_1ARTag2D.tex  classkukadu_1_1ARToolKitPlusNode.tex  classkukadu_1_1ActionClip.eps  classkukadu_1_1ActionClip.tex  classkukadu_1_1ArLocalizer.eps  classkukadu_1_1ArLocalizer.tex  classkukadu_1_1ArLogger.eps  classkukadu_1_1ArLogger.tex  classkukadu_1_1AutoCompensatingFilter.eps  classkukadu_1_1AutoCompensatingFilter.tex  classkukadu_1_1AutonomousTester.eps  classkukadu_1_1AutonomousTester.tex  classkukadu_1_1CachedPlanner.eps  classkukadu_1_1CachedPlanner.tex  classkukadu_1_1Calibrator.eps  classkukadu_1_1Calibrator.tex  classkukadu_1_1CameraCalibrator.eps  classkukadu_1_1CameraCalibrator.tex  classkukadu_1_1CartesianDMP.eps  classkukadu_1_1CartesianDMP.tex  classkukadu_1_1CartesianDMPLearner.eps  classkukadu_1_1CartesianDMPLearner.tex  classkukadu_1_1Classifier.eps  classkukadu_1_1Classifier.tex  classkukadu_1_1Clip.eps  classkukadu_1_1Clip.tex  classkukadu_1_1Clusters.tex  (+336 more)
include/kukadu/: control.hpp  generated_skills.hpp  gui.hpp  kukadu.hpp  learning.hpp  manipulation.hpp  planning.hpp  robot.hpp  storage.hpp  types.hpp  utils.hpp  vision.hpp
install/: Objects.sql  PoseEstimators.sql  cart_mes.sql  cart_mes_frc.sql  cart_mes_pos.sql  controlled_joints.sql  controller_executions.sql  controller_types.sql  controller_types_values.sql  dmp_controller_info.sql  hardware.sql  hardware.values.sql  hardware_instances.sql  hardware_instances.sql~  hardware_instances.values.sql  hardware_joints.sql  joint_mes.sql  kukie_hardware.sql  links.sql  localize_objects.sql  localized_objects.sql  recogniseable_objects.sql  reference_frames.sql  robot.sql  robot_config.sql  robot_config.sql~  robot_config.values.sql  robot_joints.sql  skill_dmp.sql  skill_dmp_coeff.sql  skill_dmp_dy0.sql  skill_dmp_g.sql  skill_dmp_y0.sql  skill_executions.sql  skills.sql  skills_robot.sql  software_classes.sql  software_functions.sql  software_modules.sql  software_namespaces.sql  (+3 more)
meta/xml/: BCH_8cpp.xml  CameraAdvImpl_8cpp.xml  CameraFactory_8cpp.xml  CameraImpl_8cpp.xml  DLL_8cpp.xml  FixedPoint_8cpp.xml  MemoryManager_8cpp.xml  Profiler_8cpp.xml  arlocalizer_8cpp.xml  arlocalizer_8hpp.xml  autocompfilter_8hpp.xml  autonomoustester_8cpp.xml  autonomoustester_8hpp.xml  byteSwap_8cpp.xml  calibration_8cpp.xml  calibration_8hpp.xml  classKomoPlanner.xml  classMoveItKinematics.xml  classRosSchunk.xml  classifier_8cpp.xml  classifier_8hpp.xml  classkukadu_1_1ARCamera.xml  classkukadu_1_1ARTag2D.xml  classkukadu_1_1ARToolKitPlusNode.xml  classkukadu_1_1ActionClip.xml  classkukadu_1_1ArLocalizer.xml  classkukadu_1_1ArLogger.xml  classkukadu_1_1AutoCompensatingFilter.xml  classkukadu_1_1AutonomousTester.xml  classkukadu_1_1CachedPlanner.xml  classkukadu_1_1Calibrator.xml  classkukadu_1_1CameraCalibrator.xml  classkukadu_1_1CartesianDMP.xml  classkukadu_1_1CartesianDMPLearner.xml  classkukadu_1_1CartesianPtp.xml  classkukadu_1_1Classifier.xml  classkukadu_1_1Clip.xml  classkukadu_1_1Clusters.xml  classkukadu_1_1ColorFilter.xml  classkukadu_1_1ComplexController.xml  (+302 more)
src/control/: controller.cpp  dmp.cpp  dmpgeneralizer.cpp  generalizer.cpp  trajectory.cpp
src/demo/: cartesian_trajectories.cpp~  cartesian_trajectoriesOzgur.cpp  cartesian_trajectoriesOzgur.cpp~
src/generated_skills/: BlockingPos.cpp  BookGrasping.cpp  ChangeModeToIMP.cpp  ChangeStiffness.cpp  CloseHand.cpp  DropInBoxController.cpp  FinalPush.cpp  MoveHome.cpp  OpenHand.cpp  PressButtonController.cpp  PushForward.cpp  PushHandPos.cpp  PushPosition.cpp  PushTranslation.cpp  RightHandBlocking.cpp  SensingPoke.cpp  SensingSlide.cpp  ShelfAlignment.cpp  ShelfPlacementController.cpp  SimpleJointPtp.cpp  WaitForReached.cpp  testasdfasdf.cpp  ultimateSkill.cpp
src/gui/: graphical.cpp  (+1 more)
test/: kukadutest.cpp
tutorials/: artracker.cpp  calibrator.cpp  cartesian_trajectories.cpp  control_queue.cpp  database.cpp  datatransfer.cpp  dmp.cpp  gaussianprocess.cpp  graphics.cpp  guided.cpp  hand.cpp  komo.cpp  komo_planning.cpp  moveit_planning.cpp  simple_planning.cpp  storage_singleton.cpp  summary.cpp
(+850 files in other folders)
