<?xml version="1.0"?>
<package>
    <name>kukadu</name>
    <version>0.0.1</version>
    <description>The kukadu package</description>

    <maintainer email="simon.hangl@uibk.ac.at">simon hangl</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>actionlib_msgs</build_depend>
    <build_depend>armadillo</build_depend>
    <build_depend>cmake_modules</build_depend>
    <build_depend>control_msgs</build_depend>
    <build_depend>eigen_conversions</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>iis_robot_dep</build_depend>
    <build_depend>libpcl-all</build_depend>
    <build_depend>libpcl-all-dev</build_depend>
    <build_depend>libqt5-core</build_depend>
    <build_depend>libqt5-gui</build_depend>
    <build_depend>libqt5-widgets</build_depend>
    <build_depend>libqt5-webkitwidgets</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>message_runtime</build_depend>
    <build_depend>moveit_core</build_depend>
    <build_depend>moveit_msgs</build_depend>
    <build_depend>moveit_ros_planning_interface</build_depend>
    <build_depend>pcl_conversions</build_depend>
    <build_depend>pcl_ros</build_depend>
    <build_depend>iis_robot_dep</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>tf2_msgs</build_depend>
    <build_depend>tf_conversions</build_depend>
    <build_depend>trajectory_msgs</build_depend>
    <build_depend>cv_bridge</build_depend>
    
    <run_depend>actionlib_msgs</run_depend>
    <run_depend>armadillo</run_depend>
    <run_depend>cmake_modules</run_depend>
    <run_depend>control_msgs</run_depend>
    <run_depend>eigen_conversions</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>iis_robot_dep</run_depend>
    <run_depend>libpcl-all</run_depend>
    <run_depend>libpcl-all-dev</run_depend>
    <run_depend>libqt5-core</run_depend>
    <run_depend>libqt5-gui</run_depend>
    <run_depend>libqt5-widgets</run_depend>
    <run_depend>libqt5-webkitwidgets</run_depend>
    <run_depend>message_generation</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>moveit_core</run_depend>
    <run_depend>moveit_msgs</run_depend>
    <run_depend>moveit_ros_planning_interface</run_depend>
    <run_depend>pcl_conversions</run_depend>
    <run_depend>pcl_ros</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>tf2_msgs</run_depend>
    <run_depend>tf_conversions</run_depend>
    <run_depend>trajectory_msgs</run_depend>
    <run_depend>cv_bridge</run_depend>

    <test_depend>rosunit</test_depend>
      
</package>
